<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="INITIALIZE" Id="{9eee4c6a-b7fe-4839-94e4-ff9f40c4ce0f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION INITIALIZE : BOOL
VAR_INPUT
END_VAR
VAR
	i : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
GVL_LOGS.NUM_TESTS_LOGGED := 0;


GVL_IO.SECTION1_DIG_INPUTS[0] := ADR(GVL_IO.J7_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[1] := ADR(GVL_IO.J7_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[2] := ADR(GVL_IO.J8_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[3] := ADR(GVL_IO.J8_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[4] := ADR(GVL_IO.J1_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[5] := ADR(GVL_IO.J1_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[6] := ADR(GVL_IO.J2_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[7] := ADR(GVL_IO.J2_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[8] := ADR(GVL_IO.J3_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[9] := ADR(GVL_IO.J3_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[10] := ADR(GVL_IO.J4_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[11] := ADR(GVL_IO.J4_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[12] := ADR(GVL_IO.J5_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[13] := ADR(GVL_IO.J5_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[14] := ADR(GVL_IO.J6_24V_Up);
GVL_IO.SECTION1_DIG_INPUTS[15] := ADR(GVL_IO.J6_24V_Us);
GVL_IO.SECTION1_DIG_INPUTS[16] := ADR(GVL_IO.SF1_MF_CONTINUITY);
GVL_IO.SECTION1_DIG_INPUTS[17] := ADR(GVL_IO.SF2_MF_CONTINUITY);
GVL_IO.SECTION1_DIG_INPUTS[18] := ADR(GVL_IO.SF4_Pull_Station);
GVL_IO.SECTION1_DIG_INPUTS[19] := ADR(GVL_IO.SF6_MGT_CONTINUITY);
GVL_IO.SECTION1_DIG_INPUTS[20] := ADR(GVL_IO.SF8_MGT_CONTINUITY);
GVL_IO.SECTION1_DIG_INPUTS[21] := ADR(GVL_IO.JB_Door_Switch);
GVL_IO.SECTION1_DIG_INPUTS[22] := ADR(GVL_IO.JB_DCDCS_OK);
GVL_IO.SECTION1_DIG_INPUTS[23] := ADR(GVL_IO.JB_PSU2_OK);


GVL_IO.SECTION2_DIG_INPUTS[0] := ADR(GVL_IO.SF4_Pull_Station);
GVL_IO.SECTION2_DIG_INPUTS[1] := ADR(GVL_IO.JB_Door_Switch);
GVL_IO.SECTION2_DIG_INPUTS[2] := ADR(GVL_IO.JB_PSU1_OK);
GVL_IO.SECTION2_DIG_INPUTS[3] := ADR(GVL_IO.J7_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[4] := ADR(GVL_IO.J7_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[5] := ADR(GVL_IO.J8_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[6] := ADR(GVL_IO.J8_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[7] := ADR(GVL_IO.J1_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[8] := ADR(GVL_IO.J1_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[9] := ADR(GVL_IO.J2_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[10] := ADR(GVL_IO.J2_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[11] := ADR(GVL_IO.J3_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[12] := ADR(GVL_IO.J3_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[13] := ADR(GVL_IO.J4_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[14] := ADR(GVL_IO.J4_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[15] := ADR(GVL_IO.J5_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[16] := ADR(GVL_IO.J5_24V_Us);
GVL_IO.SECTION2_DIG_INPUTS[17] := ADR(GVL_IO.J6_24V_Up);
GVL_IO.SECTION2_DIG_INPUTS[18] := ADR(GVL_IO.J6_24V_Us);


INITIALIZE := TRUE;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>